# vortex

./: .gitignore  .mcp.json  Cargo.toml  README.md
.github/: CLAUDE.md
crates/vortex-analysis/: Cargo.toml
crates/vortex-analysis/src/: beats.rs  kills.rs  lib.rs  probe.rs  scenes.rs
crates/vortex-core/: Cargo.toml
crates/vortex-core/src/: audio.rs  clip.rs  effects.rs  lib.rs  timeline.rs
crates/vortex-effects/: Cargo.toml
crates/vortex-effects/src/: chromatic.rs  color.rs  flash.rs  lib.rs  rotoscope.rs  shake.rs  stabilize.rs  text.rs  velocity.rs  zoom.rs
crates/vortex-ml/: Cargo.toml
crates/vortex-ml/src/: lib.rs  runtime.rs
crates/vortex-render/: Cargo.toml
crates/vortex-render/src/: lib.rs  pipeline.rs  rotoscope.rs
crates/vortex-script/: Cargo.toml
crates/vortex-script/src/: lib.rs
crates/vortex-server/: Cargo.toml
crates/vortex-server/examples/: create_sample_project.rs
crates/vortex-server/src/: cli.rs  main.rs  mcp.rs
crates/vortex-styles/: Cargo.toml
crates/vortex-styles/src/: lib.rs  parser.rs
docs/: VORTEXArchitecture.md
examples/: sample-project.json
scripts/: basic-montage.rhai  basic-montage.ts  beat-sync-demo.ts
styles/: aggressive.toml  chill.toml  cinematic.toml
test-clips/: README.md
tests/: test_effects.rs  test_render.rs  test_timeline.rs
