[workspace]
members = [
    "crates/vortex-core",
    "crates/vortex-analysis",
    "crates/vortex-ml",
    "crates/vortex-script",
    "crates/vortex-effects",
    "crates/vortex-render",
    "crates/vortex-server",
    "crates/vortex-styles",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["VORTEX Contributors"]
license = "MIT"
repository = "https://github.com/sangrish/vortex"

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Error handling
thiserror = "1"
anyhow = "1"

# Async
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"

# CLI
clap = { version = "4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# MCP / JSON-RPC
serde_repr = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }
