[package]
name = "vortex-ml"
description = "ONNX runtime wrapper for ML inference (YOLOv8, SAM3)"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
vortex-core = { path = "../vortex-core" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

# TODO (Phase 2): uncomment when integrating ONNX runtime
# ort = { version = "2", features = ["cuda"] }
# ndarray = "0.15"
