[package]
name = "vortex-ml"
description = "ONNX runtime wrapper for ML inference (YOLOv8, SAM3)"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
vortex-core = { path = "../vortex-core" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

ndarray = "0.15"

[features]
default = []
# Enable real ONNX Runtime inference.
# Requires ort to download the native OrtDNNRuntime DLL at build time.
onnx = ["dep:ort"]

[dependencies.ort]
version = "2.0.0-rc.12"
features = ["download-binaries"]
optional = true
