[package]
name = "vortex-script"
description = "JavaScript/TypeScript scripting via V8/Deno embed"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
vortex-core = { path = "../vortex-core" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

rhai = { version = "1", features = ["sync"] }
